# GoIT_PyWeb_HW7

hw7_web/: config.ini  main.py  pyproject.toml  readme.md  seeds.py  select_.py
hw7_web/alembic/: env.py
hw7_web/alembic/versions/: 5ec560e2aacf_init.py  e40b9a230567_init.py
hw7_web/database/: db.py  models.py
